Bug 1330891 - Baldr: don't lose error during parallel compilation (r=bbouvier)

MozReview-Commit-ID: LC30MUEo2H1

--HG--
extra : rebase_source : aaebec2a63437692865f16f503060ae054cda1f1